[project]
name = "social-network"
version = "0.1.0"
description = ""
authors = [
    {name = "Guilherme Bartz Loesia",email = "guiloesia@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "tortoise-orm[asyncpg] (>=0.24.2,<0.25.0)",
    "pydantic (>=2.11.1,<3.0.0)"
]

[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"

[tool.taskipy.tasks]
dev = "fastapi dev dev.py"
prod = "uvicorn src.api.application:app --host 0.0.0.0 --port 8000 --reload"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"